--- a/package.json
+++ b/package.json
@@ -23,6 +23,19 @@
   "babel": {
     "presets": [
       "@babel/preset-react"
+    ],
+    "plugins": [
+      [
+        "babel-plugin-direct-import",
+        {
+          "modules": [
+            "@mui/lab",
+            "@mui/system",
+            "@mui/material",
+            "@mui/icons-material"
+          ]
+        }
+      ]
     ]
   },
   "browserslist": {
@@ -38,16 +51,21 @@
     ]
   },
   "dependencies": {
+    "@date-io/luxon": "^2.16.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@faker-js/faker": "^7.6.0",
     "@iconify/react": "^4.0.0",
     "@mui/lab": "^5.0.0-alpha.103",
-    "@mui/material": "^5.10.9",
+    "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^5.0.19",
     "apexcharts": "^3.36.0",
+    "axios": "^1.3.4",
+    "babel-plugin-direct-import": "^1.0.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
+    "luxon": "^3.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
