--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
     "luxon": "^3.2.1",
+    "material-ui-confirm": "^3.0.8",
+    "notistack": "^2.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
