--- a/package.json
+++ b/package.json
@@ -64,8 +64,11 @@
     "babel-plugin-direct-import": "^1.0.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "luxon": "^3.2.1",
+    "material-ui-confirm": "^3.0.9",
+    "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -74,8 +77,7 @@
     "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^3.0.3",
-    "material-ui-confirm": "^3.0.9",
-    "notistack": "^3.0.1"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
